Added autofocus to search bar

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<header>
 		<h1>You<span class="red">Tube</span></h1>
 		<form>
-			<input type="text" id="search"></input>
+			<input type="text" id="search" autofocus></input>
 			<button type="submit" id="submit" value="Search">Search</button>
 		</form>
 	</header>
